# CTris

./: INSTALL  Makefile.am  README.md  autogen.sh  compile.sh  configure.ac  control  ctris.desktop  makefile
data/: Makefile.am
doc/: Makefile.am  changelog  changelog.Debian
include/: all_blocks.h  border_window.h  constants.h  ctris.h  game_window.h  square.h
man/: Makefile.am
src/: Makefile.am  block.cpp  border_window.cpp  game_window.cpp  l_left_piece.cpp  l_right_piece.cpp  long_piece.cpp  main.cpp  snake_left_piece.cpp  snake_right_piece.cpp  square.cpp  square_piece.cpp  t_piece.cpp  window.cpp
