bin_PROGRAMS = ctris
ctris_SOURCES  = \
	block.cpp game_window.cpp \
	long_piece.cpp main.cpp \
	snake_left_piece.cpp square.cpp \
	t_piece.cpp border_window.cpp \
	l_left_piece.cpp l_right_piece.cpp \
	snake_right_piece.cpp  square_piece.cpp \
	window.cpp all_blocks.h border_window.h \
	ctris.h l_left_piece.h l_right_piece.h \
	snake_right_piece.h square_piece.h  window.h \
	block.h constants.h game_window.h long_piece.h \
	snake_left_piece.h square.h t_piece.h
